Made some changes to formatting, added to the Action page

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moms-against-ewoks",
-  "homepage": "http://gabesarver.github.io/MomsAgainstEwoks",
+  "homepage": "https://gabesarver.github.io/MomsAgainstEwoks",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
